--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "jest --watchAll --no-cache --detectOpenHandles",
     "start": "node server.js",
     "server": "nodemon backend/server.js"
   },
@@ -21,6 +22,11 @@
     "mongoose": "^7.5.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
+
