--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - mongo
     environment:
-      - MONGO_URL=mongodb://mongo:27017/mern-stack
+      - MONGO_URI=mongodb://mongo:27017/mern-stack
 
   frontend:
     container_name: app-front
